--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,12 @@
 [metadata]
 name = napari_mito_hcs
+description = MitoHCS Plugin for Napari
+license = LICENSE.txt
+long-description = README.md
 version = 0.0.1
 classifiers =
     Framework :: napari
+    Programming Language :: Python
 
 [options]
 package_dir=
@@ -30,12 +34,14 @@ napari_mito_hcs =
 [options.entry_points]
 napari.manifest =
     napari_mito_hcs = napari_mito_hcs:napari.yaml
+console_scripts =
+    mito-hcs-batch = napari_mito_hcs.pipeline:run_mito_hcs_batch_cmd
 
 [options.extras_require]
 test =
     pytest
     pyflakes
     pycodestyle
-    matplotlib
+    pytest-cov
 docs =
     sphinx
