--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Test and Build napari-mito-hcs
 
 on:
   push:
@@ -38,3 +35,14 @@ jobs:
           junit/pytest-results.xml
           htmlcov/
       if: ${{ always() }}
+    - name: Build the package
+      run: |
+        python -m pip install --upgrade pip build setuptools wheel
+        python -m build .
+    - name: Upload the wheel and sdist
+      uses: actions/upload-artifact@v4
+      with:
+        name: build-results
+        path: |
+          dist/napari_mito_hcs-*.whl
+          dist/napari_mito_hcs-*.tar.gz
