--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 name = napari_mito_hcs
 description = MitoHCS Plugin for Napari
 license = LICENSE.txt
-long-description = README.md
-version = 0.0.1
+long_description = README.md
+version = 0.1.0
 classifiers =
     Framework :: napari
     Programming Language :: Python
