--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,3 +46,15 @@ jobs:
         path: |
           dist/napari_mito_hcs-*.whl
           dist/napari_mito_hcs-*.tar.gz
+    - name: Build the docs
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install ".[docs]"
+        cd docs
+        make html
+    - name: Upload the HTML
+      uses: actions/upload-artifact@v4
+      with:
+        name: docs-results
+        path: |
+          docs/_build/html/*
