--- a/src/napari_mito_hcs/config/cells.toml
+++ b/src/napari_mito_hcs/config/cells.toml
@@ -1,6 +1,6 @@
 intensity_smoothing = 0.5
 threshold = 1000
-smallest_hole = 100
+largest_hole = 100
 smallest_object = 200
 binary_smoothing = 2
 algorithm = 'cells'
