--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,9 +20,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+    - name: Setup headless display
+      uses: pyvista/setup-headless-display-action@v2
+      with:
+        qt: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install "napari[all]"
         python -m pip install ".[test]"
     - name: Test with pytest
       run: |
