--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ install_requires =
     napari
     numpy
     scipy
-    scikit-image
+    scikit-image==0.24
     tomlkit
     tifffile
     pandas
